--- a/docker-login-build-push/action.yaml
+++ b/docker-login-build-push/action.yaml
@@ -29,6 +29,36 @@ inputs:
     required: true
     description: Google Credentials for AR access
 
+  scan_image:
+    required: true
+    default: 'true'
+    description: Scan the builded image before push
+
+  scan_format:
+    description: Trivy output format
+    required: false
+    default: "table"
+
+  scan_exit_code:
+    description: Exit code threshold (fail build if vulnerabilities ≥ this)
+    required: false
+    default: "1"
+
+  scan_ignore_unfixed:
+    description: Ignore unfixed vulns
+    required: false
+    default: "true"
+
+  scan_vuln_type:
+    description: Vulnerability types to scan
+    required: false
+    default: "os,library"
+
+  scan_severity:
+    description: Severity levels that will cause the action to fail
+    required: false
+    default: "CRITICAL,HIGH"
+
   push:
     required: true
     default: "true"
@@ -55,14 +85,16 @@ runs:
       run: docker build ${{ inputs.args }} -t '${{ inputs.image }}' -f ${{ inputs.dockerfile }} ${{ inputs.context }}
 
     - name: Run Trivy vulnerability scanner
+      if: ${{ inputs.scan_image == 'true' }}
       uses: aquasecurity/trivy-action@0.30.0
       with:
         image-ref: ${{ inputs.image }}
-        format: 'table'
-        exit-code: '1'
-        ignore-unfixed: true
-        vuln-type: 'os,library'
-        severity: 'CRITICAL,HIGH'
+        format: ${{ inputs.scan_format }}
+        exit-code: ${{ inputs.scan_exit_code }}
+        ignore-unfixed: ${{ inputs.scan_ignore_unfixed }}
+        vuln-type: ${{ inputs.scan_vuln_type }}
+        severity: ${{ inputs.scan_severity }}
+
         
     - name: Docker Push
       id: docker-push
